<resources>
    <string name="app_name">Adhān</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Adhān</string>
    <string name="nav_header_subtitle">Company</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_themeon">Light Mode</string>
    <string name="action_themeoff">Dark Mode</string>

    <string name="menu_home">Prayer Times</string>
    <string name="home_first_time">Fajr</string>
    <string name="home_second_time">Sunrise</string>
    <string name="home_third_time">Dhuhr</string>
    <string name="home_fourth_time">Asr</string>
    <string name="home_fifth_time">Maghrib</string>
    <string name="home_sixth_time">Ishaa</string>

    <string name="first_time">00:00</string>
    <string name="second_time">00:00</string>
    <string name="third_time">00:00</string>
    <string name="fourth_time">00:00</string>
    <string name="fifth_time">00:00</string>
    <string name="sixth_time">00:00</string>

    <string name="city">Position not found</string>
    <string name="date">00/00/0000</string>

    <string name="menu_quibla">Quibla</string>
    <string name="menu_quran">Quran</string>
    <string name="pick_date">Pick date </string>
    <string name="pick_place">Pick place</string>


</resources>