<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gebetsapp.ui.Adhan.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_quibla"
        android:name="com.example.gebetsapp.ui.Quibla.QuiblaFragment"
        android:label="@string/menu_quibla"
        tools:layout="@layout/fragment_quibla" />

    <fragment
        android:id="@+id/nav_quran"
        android:name="com.example.gebetsapp.ui.Quran.QuranFragment"
        android:label="@string/menu_quran"
        tools:layout="@layout/fragment_quran" />
</navigation>